--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -169,7 +169,7 @@ collections:
         name: socialIcons
         file: "src/util/socialmedia.json"
         fields:
-          - label: Значки социальных сетей 
+          - label: Social Icons
             name: socialIcons
             widget: list
             collapsed: true
