--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -174,13 +174,9 @@ collections:
             widget: list
             collapsed: true
             hint: "Здесь вы можете добавить значки социальных сетей, нажмите на кнопку "Добавить значки социальных сетей"."
-            fields:
-              - label: "Значки"
-                name: "icon"
-                widget: "select"
-                options:
-                  [
-                    "facebook",
+            fields: 
+            - { label: "Значки", name: "icon", widget: "select", options: [
+                   "facebook",
                     "twitter",
                     "linkedin",
                     "youtube",
@@ -197,7 +193,7 @@ collections:
                     "medium",
                     "behance",
                     "vk",
-                  ]
+                  ]}
                 hint: "Выберите значок"
               - widget: string
                 name: url
