--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -173,7 +173,7 @@ collections:
             name: "socialIcons"
             widget: list
             collapsed: true
-            hint: "Здесь вы можете добавить значки социальных сетей, нажмите на кнопку "Добавить значки социальных сетей"."
+            hint: "Здесь вы можете добавить значки социальных сетей, нажмите на кнопку Добавить значки социальных сетей."
             fields: 
             - { label: "Значки", name: "icon", widget: "select", options: [
                    "facebook",
