--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,55 +1,54 @@
- backend: 
-   name: git-gateway
-   branch: main
-   commit_messages:
-   create: "Создать {{collection}} “{{slug}}”"
-   update: "Обновить {{collection}} “{{slug}}”"
-   delete: "Удалить {{collection}} “{{slug}}”"
-   uploadMedia: "[skip ci] Загрузить “{{path}}”"
-   deleteMedia: "[skip ci] Удалить “{{path}}”"
+backend:
+  name: git-gateway
+  branch: main
+  commit_messages:
+    create: "Create {{collection}} “{{slug}}”"
+    update: "Update {{collection}} “{{slug}}”"
+    delete: "Delete {{collection}} “{{slug}}”"
+    uploadMedia: "[skip ci] Upload “{{path}}”"
+    deleteMedia: "[skip ci] Delete “{{path}}”"
 
 # Uncomment local_backend when you need to develop in your local
 #local_backend: true # run `npx netlify-cms-proxy-server` for local testing
-#Перевод на русский язык сделал Невдах Александр. Столин. 2023
 
-  media_folder: "static/assets"
-  public_folder: "/assets"
+media_folder: "static/assets"
+public_folder: "/assets"
 
-  collections:
-   - name: "posts" # Used in routes, ie.: /admin/collections/:slug/edit
-     label: "Post" # Used in the UI
-     label_singular: "пост" # Used in the UI, ie: "New Post"
-     description: >
-      Создавайте потрясающий контент здесь.
-     folder: "src/content/posts"
-     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-     summary: "{{title}} — {{year}}/{{month}}/{{day}}"
-     create: true # Allow users to create new documents in this collection
-     fields: # The fields each document in this collection have
+collections:
+  - name: "posts" # Used in routes, ie.: /admin/collections/:slug/edit
+    label: "Posts" # Used in the UI
+    label_singular: "Post" # Used in the UI, ie: "New Post"
+    description: >
+      Create awesome content here.
+    folder: "src/content/posts"
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    summary: "{{title}} — {{year}}/{{month}}/{{day}}"
+    create: true # Allow users to create new documents in this collection
+    fields: # The fields each document in this collection have
       - {
           label: "Template",
           name: "template",
           widget: "hidden",
           default: "blog-post",
         }
-      - { label: "Заголовок", name: "title", widget: "string", tagname: "h1" }
+      - { label: "Title", name: "title", widget: "string", tagname: "h1" }
       - {
-          label: "Адрес поста",
+          label: "Slug",
           name: "slug",
           widget: "string",
-          hint: "Задайте адрес поста с помощью /. Используйте только буквенно-цифровые символы, - и _. Избегайте пробелов.",
+          hint: "Start slug with /. Use only alphanumeric characters, - and _. Avoid spaces in any cases.",
         }
       - {
-          label: "Дата публикации",
+          label: "Publish Date",
           name: "date",
           widget: "datetime",
           dateFormat: "YYYY-MM-DD",
           timeFormat: "HH:mm",
           format: "YYYY-MM-DD HH:mm",
         }
-      - { label: "Описание SEO", name: "description", widget: "text" }
+      - { label: "SEO Description", name: "description", widget: "text" }
       - {
-          label: "Отображаемое изображение",
+          label: "Featured Image",
           name: "featuredImage",
           widget: "image",
           required: false,
@@ -60,26 +59,26 @@
           label: "Body",
           name: "body",
           widget: "markdown",
-          hint: "Основное содержание находится здесь.",
+          hint: "Main content goes here.",
         }
-      - label: "Страницы"
-        name: "pages"
-        files:
-        - label: "Главная"
-          name: "home"
-          file: "src/content/pages/index.md"
-          fields:
+  - label: "Pages"
+    name: "pages"
+    files:
+      - label: "Home"
+        name: "home"
+        file: "src/content/pages/index.md"
+        fields:
           - {
               label: "Template",
               name: "template",
               widget: "hidden",
               default: "index-page",
             }
-          - { label: "Адрес", name: "slug", widget: "hidden", default: "/" }
-          - { label: "Заголовок", name: "title", widget: "string" }
-          - { label: "Подзаголовок", name: "tagline", widget: "string" }
-          - { label: "Отображаемое изображение", name: "featuredImage", widget: "image" }
-          - { label: "Основа страницы", name: "body", widget: "markdown" }
+          - { label: "Slug", name: "slug", widget: "hidden", default: "/" }
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Tagline", name: "tagline", widget: "string" }
+          - { label: "Featured Image", name: "featuredImage", widget: "image" }
+          - { label: "Body", name: "body", widget: "markdown" }
           - label: "CTA"
             name: "cta"
             widget: "object"
@@ -121,108 +120,109 @@
             }
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Body", name: "body", widget: "markdown" }
-      - name: settings
-        label: Настройки сайта
-        files:
+  - name: settings
+    label: Settings
+    files:
       - name: general
-        label: Основные настройки
+        label: General
         file: "src/util/site.json"
         fields:
-            - label: meta
-              name: meta
-              widget: object
-              fields:
+          - label: meta
+            name: meta
+            widget: object
+            fields:
               - widget: string
                 name: title
-                label: Заголовок сайта
+                label: Site Title
                 required: true
-                - widget: string
+              - widget: string
                 name: titleTemplate
-                label: Шаблон заголовка
+                label: Title Template
                 default: "%s"
                 required: true
-                - widget: string
-                  name: siteUrl
-                  label: URL веб-сайта
-                  required: true
-                - widget: text
-                  name: description
-                  label: Описание
-                  default: ""
-                  required: false
-                - widget: image
-                  name: image
-                  label: Изображение
-                  default: "/assets/stackrole.png"
-                - widget: image
-                  name: iconimage
-                  label: Иконка сайта
-                - widget: string
-                  name: twitterUsername
-                  label: Twitter
-                  required: false
+              - widget: string
+                name: siteUrl
+                label: Website URL
+                required: true
+              - widget: text
+                name: description
+                label: Description
+                default: ""
+                required: false
+              - widget: image
+                name: image
+                label: image
+                default: "/assets/stackrole.png"
+              - widget: image
+                name: iconimage
+                label: favicon
+              - widget: string
+                name: twitterUsername
+                label: Twitter
+                required: false
 
-          - label: "Google Аналитика"
+          - label: "Google Analytics"
             name: ga
             widget: string
-            hint: "Добавьте свой идентификатор отслеживания статистики сайта, например UA-XXXXXXXXX-X"
-          - label: "Значки социальных сетей"
-            name: "socialIcons"
-            file: "src/util/socialmedia.json"
+            hint: "Add you tracking ID, for example UA-XXXXXXXXX-X"
+      - label: Social Icons
+        name: socialIcons
+        file: "src/util/socialmedia.json"
+        fields:
+          - label: Social Icons
+            name: socialIcons
+            widget: list
+            collapsed: true
+            hint: "Here you can add social icons, Click on 'Add social icons'"
             fields:
-              - label: "socialIcons"
-                name: "socialIcons"
-                widget: list
-                collapsed: true
-                hint: "Здесь вы можете добавить значки социальных сетей, нажмите на кнопку Добавить значки социальных сетей."
-                fields: 
-                  - label: "Значки", 
-                    name: "icon", 
-                    widget: "select", 
-                    options: [
-                      "facebook",
-                      "twitter",
-                      "linkedin",
-                      "youtube",
-                      "instagram",
-                      "rss",
-                      "github",
-                      "telegram",
-                      "pinterest",
-                      "snapchat",
-                      "skype",
-                      "wordpress",
-                      "tiktok",
-                      "dribbble",
-                  "medium",
-                  "behance",
-                      "vk",
+              - label: "Icons"
+                name: "icon"
+                widget: "select"
+                options:
+                  [
+                    "facebook",
+                    "twitter",
+                    "linkedin",
+                    "youtube",
+                    "instagram",
+                    "rss",
+                    "github",
+                    "telegram",
+                    "pinterest",
+                    "snapchat",
+                    "skype",
+                    "wordpress",
+                    "tiktok",
+                    "dribbble",
+                    "medium",
+                    "behance",
+                    "vk",
                   ]
-                hint: "Выберите значок"
+                hint: "Select the Icon"
               - widget: string
                 name: url
                 label: url
                 required: true
-                hint: "Вставьте "URL" вашей социальной сети"
+                hint: "Paste the 'URL' of your Social media"
 
-  - label: "Внешний вид сайта"
+  - label: "Appearance"
     name: "appearance"
     identifier_field: "name"
     files:
-      - label: "Стандартная тема"
+      - label: "Default Theme"
         name: "themescolors"
         file: "src/util/default-colors.json"
         fields:
-          - label: "Основной цвет"
+          - label: "Primary Color"
             name: "siteColor"
             widget: "color"
             enableAlpha: true
             allowInput: true
-      - label: "Темная тема"
+      - label: "Dark Theme"
         name: "darkthemescolors"
         file: "src/util/dark-theme-colors.json"
         fields:
-          - label: "Основной цвет"
+          - label: "Primary Color"
             name: "siteColor"
             widget: "color"
             enableAlpha: true
