--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,11 +2,11 @@ backend:
   name: git-gateway
   branch: main
   commit_messages:
-    create: "Create {{collection}} “{{slug}}”"
-    update: "Update {{collection}} “{{slug}}”"
-    delete: "Delete {{collection}} “{{slug}}”"
-    uploadMedia: "[skip ci] Upload “{{path}}”"
-    deleteMedia: "[skip ci] Delete “{{path}}”"
+    create: "Создать {{collection}} “{{slug}}”"
+    update: "Обновить {{collection}} “{{slug}}”"
+    delete: "Удалить {{collection}} “{{slug}}”"
+    uploadMedia: "[skip ci] Загрузить “{{path}}”"
+    deleteMedia: "[skip ci] Удалить “{{path}}”"
 
 # Uncomment local_backend when you need to develop in your local
 #local_backend: true # run `npx netlify-cms-proxy-server` for local testing
