--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,8 +16,8 @@ public_folder: "/assets"
 
 collections:
   - name: "posts" # Used in routes, ie.: /admin/collections/:slug/edit
-    label: "Posts" # Used in the UI
-    label_singular: "Post" # Used in the UI, ie: "New Post"
+    label: "Новости" # Used in the UI
+    label_singular: "Пост" # Used in the UI, ie: "New Post"
     description: >
       Create awesome content here.
     folder: "src/content/posts"
@@ -26,14 +26,14 @@ collections:
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
       - {
-          label: "Template",
+          label: "Шаблон",
           name: "template",
           widget: "hidden",
           default: "blog-post",
         }
-      - { label: "Title", name: "title", widget: "string", tagname: "h1" }
+      - { label: "Заголовок", name: "title", widget: "string", tagname: "h1" }
       - {
-          label: "Slug",
+          label: "Путь к новости",
           name: "slug",
           widget: "string",
           hint: "Start slug with /. Use only alphanumeric characters, - and _. Avoid spaces in any cases.",
