--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -36,7 +36,7 @@ collections:
           label: "Путь к новости",
           name: "slug",
           widget: "string",
-          hint: "Начинайте путь с "/". Используйте только буквенно-цифровые символы, "-" и "_". Во остальных случаях избегайте пробелов.",
+          hint: "Начинайте путь с /. Используйте только буквенно-цифровые символы, - и _. Во остальных случаях избегайте пробелов.",
         }
       - {
           label: "Дата публикации",
