--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -61,24 +61,24 @@ collections:
           widget: "markdown",
           hint: "Основное содержание находится здесь.",
         }
-  - label: "Pages"
+  - label: "Страницы веб-сайта"
     name: "pages"
     files:
-      - label: "Home"
+      - label: "Главная"
         name: "home"
         file: "src/content/pages/index.md"
         fields:
           - {
-              label: "Template",
+              label: "Шаблон",
               name: "template",
               widget: "hidden",
               default: "index-page",
             }
-          - { label: "Slug", name: "slug", widget: "hidden", default: "/" }
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Tagline", name: "tagline", widget: "string" }
-          - { label: "Featured Image", name: "featuredImage", widget: "image" }
-          - { label: "Body", name: "body", widget: "markdown" }
+          - { label: "Путь", name: "slug", widget: "hidden", default: "/" }
+          - { label: "Заголовок", name: "title", widget: "string" }
+          - { label: "Подзаголовок", name: "tagline", widget: "string" }
+          - { label: "Изображение", name: "featuredImage", widget: "image" }
+          - { label: "Текст", name: "body", widget: "markdown" }
           - label: "CTA"
             name: "cta"
             widget: "object"
@@ -89,93 +89,93 @@ collections:
               - name: "ctaLink"
                 label: "CTA Link"
                 widget: "string"
-      - label: "About"
+      - label: "О нас"
         name: "about"
         file: "src/content/pages/about.md"
         fields:
           - {
-              label: "Template",
+              label: "Шаблон",
               name: "template",
               widget: "hidden",
               default: "about-page",
             }
-          - { label: "Slug", name: "slug", widget: "hidden", default: "/about" }
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Body", name: "body", widget: "markdown" }
-      - label: "Contact"
+          - { label: "Путь", name: "slug", widget: "hidden", default: "/about" }
+          - { label: "Заголовок", name: "title", widget: "string" }
+          - { label: "Текст", name: "body", widget: "markdown" }
+      - label: "Обратная связь"
         name: "contact"
         file: "src/content/pages/contact.md"
         fields:
           - {
-              label: "Template",
+              label: "Шаблон",
               name: "template",
               widget: "hidden",
               default: "contact-page",
             }
           - {
-              label: "Slug",
+              label: "Путь",
               name: "slug",
               widget: "hidden",
               default: "/contact",
             }
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Body", name: "body", widget: "markdown" }
+          - { label: "Заголовок", name: "title", widget: "string" }
+          - { label: "Текст", name: "body", widget: "markdown" }
   - name: settings
-    label: Settings
+    label: Настройки веб-сайта
     files:
       - name: general
-        label: General
+        label: Основа
         file: "src/util/site.json"
         fields:
-          - label: meta
+          - label: мета
             name: meta
             widget: object
             fields:
               - widget: string
                 name: title
-                label: Site Title
+                label: Заголовок сайта
                 required: true
               - widget: string
                 name: titleTemplate
-                label: Title Template
+                label: Шаблон второй части заголовка
                 default: "%s"
                 required: true
               - widget: string
                 name: siteUrl
-                label: Website URL
+                label: Веб-адрес сайта
                 required: true
               - widget: text
                 name: description
-                label: Description
+                label: Описание веб-сайта
                 default: ""
                 required: false
               - widget: image
                 name: image
-                label: image
+                label: Изображение
                 default: "/assets/stackrole.png"
               - widget: image
                 name: iconimage
-                label: favicon
+                label: Иконка сайта
               - widget: string
                 name: twitterUsername
                 label: Twitter
                 required: false
 
-          - label: "Google Analytics"
+          - label: "Google Аналитика"
             name: ga
             widget: string
-            hint: "Add you tracking ID, for example UA-XXXXXXXXX-X"
-      - label: Social Icons
+            hint: "Добавьте свой идентификатор отслеживания, например UA-XXXXX XXXXX"
+      - label: Социальные сети 
         name: socialIcons
         file: "src/util/socialmedia.json"
         fields:
-          - label: Social Icons
+          - label: Изображение соцеальных сетей
             name: socialIcons
             widget: list
             collapsed: true
-            hint: "Here you can add social icons, Click on 'Add social icons'"
+            hint: "Здесь вы можете добавить значки социальных сетей, нажмите на 'Добавить значки социальных сетей'."
             fields:
-              - label: "Icons"
+              - label: "Изображение"
                 name: "icon"
                 widget: "select"
                 options:
@@ -198,31 +198,31 @@ collections:
                     "behance",
                     "vk",
                   ]
-                hint: "Select the Icon"
+                hint: "Выберите значок"
               - widget: string
                 name: url
-                label: url
+                label: по адресу в сети Интернет
                 required: true
-                hint: "Paste the 'URL' of your Social media"
+                hint: "Вставьте URL вашей социальной сети"
 
-  - label: "Appearance"
+  - label: "Внешность веб-сайта"
     name: "appearance"
     identifier_field: "name"
     files:
-      - label: "Default Theme"
+      - label: "Тема веб-сайта по умолчанию"
         name: "themescolors"
         file: "src/util/default-colors.json"
         fields:
-          - label: "Primary Color"
+          - label: "Основной цвет"
             name: "siteColor"
             widget: "color"
             enableAlpha: true
             allowInput: true
-      - label: "Dark Theme"
+      - label: "Темная тема"
         name: "darkthemescolors"
         file: "src/util/dark-theme-colors.json"
         fields:
-          - label: "Primary Color"
+          - label: "Основной цвет"
             name: "siteColor"
             widget: "color"
             enableAlpha: true
