--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -40,6 +40,12 @@ collections:
           hint: "Начинайте путь с /. Используйте только буквенно-цифровые символы, - и _. Во остальных случаях избегайте пробелов.",
         }
       - {
+          label: "Время на чтение",
+          name: "timeforread",
+          widget: "string",
+          hint: "Укажите количество времени, которое необходимо на прочтение этой статьи.",
+        }
+      - {
           label: "Дата публикации",
           name: "date",
           widget: "datetime",
