--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
     "@theme-ui/color": "^0.6.0",
+    "connect": "^3.7.0",
     "gatsby": "^4.7.1",
     "gatsby-plugin-google-analytics": "^4.7.0",
     "gatsby-plugin-image": "^2.7.0",
@@ -42,6 +43,8 @@
     "gatsby-transformer-remark": "^5.7.0",
     "gatsby-transformer-sharp": "^4.7.0",
     "netlify-cms-app": "^2.14.32",
+    "passport-google-oauth": "^2.0.0",
+    "passport-yandex": "^0.0.5",
     "prismjs": "^1.27.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
