--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@theme-ui/color": "^0.6.0",
     "connect": "^3.7.0",
     "gatsby": "^4.7.1",
+    "gatsby-plugin-disqus": "^1.2.6",
     "gatsby-plugin-google-analytics": "^4.7.0",
     "gatsby-plugin-image": "^2.7.0",
     "gatsby-plugin-manifest": "^4.7.0",
