--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -34,10 +34,10 @@ collections:
         }
       - { label: "Заголовок", name: "title", widget: "string", tagname: "h1" }
       - {
-          label: "Путь к новости",
+          label: "Путь к статье",
           name: "slug",
           widget: "string",
-          hint: "Начинайте путь с /. Используйте только буквенно-цифровые символы, - и _. Во остальных случаях избегайте пробелов.",
+          hint: "Начинайте путь с /. Используйте только буквенно-цифровые символы, - и _. В остальных случаях избегайте пробелов.",
         }
       - {
           label: "Время на чтение",
