--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -40,7 +40,7 @@ collections:
           hint: "Начинайте путь с /. Используйте только буквенно-цифровые символы, - и _. В остальных случаях избегайте пробелов.",
         }
       - {
-          label: "Время на чтение",
+          label: "Время, необходимое на чтение статьи",
           name: "timeforread",
           widget: "string",
           hint: "Укажите количество времени, которое необходимо на прочтение этой статьи.",
@@ -63,7 +63,7 @@ collections:
         }
 
       - {
-          label: "Новость",
+          label: "Текст",
           name: "body",
           widget: "markdown",
           hint: "Основное содержание находится здесь.",
