--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,13 +17,13 @@ public_folder: "/assets"
 
 collections:
   - name: authors
-    label: Authors
+    label: Авторы
     folder: "authors"
     create: true
     fields:
-      - {name: name, label: Name}
-      - {name: twitterHandle, label: "Twitter Handle"}
-      - {name: bio, label: Bio, widget: text}
+      - {name: name, label: Имя}
+      - {name: vkHandle, label: "vkHandle"}
+      - {name: bio, label: Биография, widget: text}
   - name: "posts" # Used in routes, ie.: /admin/collections/:slug/edit
     label: "Новости" # Used in the UI
     label_singular: "Пост" # Used in the UI, ie: "New Post"
@@ -77,10 +77,10 @@ collections:
           hint: "Основное содержание находится здесь.",
         }
       - name: author
-        label: Author
+        label: Автор
         widget: relation
         collection: authors
-        searchFields: [name, twitterHandle]
+        searchFields: [name, vkHandle]
         valueField: name
         
   - label: "Страницы веб-сайта"
