--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -81,6 +81,11 @@ collections:
         collection: authors
         searchFields: [name, vkHandle]
         valueField: name
+  - label: "Tags"
+    name: "tags"
+    widget: "list"
+    summary: '{{fields.name}}'
+    field: {label: Name, name: name, widget: string}
   - label: "Страницы веб-сайта"
     name: "pages"
     files:
