--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,7 +14,7 @@ backend:
 
 media_folder: static/assets
 public_folder: "/assets"
-
+publish_mode: editorial_workflow
 
 collections:
   - name: authors
