--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,6 +14,10 @@ backend:
 
 media_folder: static/assets
 public_folder: "/assets"
+media_library:
+  name: uploadcare
+  config:
+    publicKey: 28d801fdf9f4474cce8e
 publish_mode: editorial_workflow
 
 collections:
