--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -76,6 +76,7 @@ collections:
           widget: "markdown",
           hint: "Основное содержание находится здесь.",
         }
+      - {label: "Tags", name: "tags", widget: "list"}
       - name: author
         label: Автор
         widget: relation
