--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,7 +16,7 @@ media_folder: static/assets
 public_folder: "/assets"
 
 locale: 'ru'
-
+logo_url: https://blog-10a.netlify.app/static/logo.svg
 collections:
   - name: authors
     label: Авторы
@@ -32,6 +32,9 @@ collections:
     description: >
       Создавайте потрясающий контент здесь.
     folder: "src/content/posts"
+    filter:
+      field: Язык
+      value: ru
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     summary: "{{title}} — {{year}}/{{month}}/{{day}}"
     create: true # Allow users to create new documents in this collection
